--- a/bestaetigung.html
+++ b/bestaetigung.html
@@ -98,6 +98,7 @@
   <!-- BUTTONS -->
   <div class="btn-area">
     <button class="btn-dl" onclick="downloadPDF()">📥 Bestätigung als PDF</button>
+    <a class="btn-dl" href="/pdf/faq-camps.pdf" target="_blank" rel="noopener" style="text-decoration:none;display:inline-flex;align-items:center;justify-content:center;">📄 FAQ Camps (PDF)</a>
     <a href="index.html" class="btn-home">← Zur Startseite</a>
   </div>
 </div>
