Add canonical and Open Graph tags on core pages

--- a/anmeldung.html
+++ b/anmeldung.html
@@ -7,6 +7,16 @@
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/anmeldung.css">
 <meta name="description" content="Jetzt anmelden zum Fußball-Feriencamp der Fußballschule TALENTEXPERTE in Aachen. Online-Anmeldung in 2 Minuten.">
+<link rel="canonical" href="https://www.talentexperte.de/anmeldung.html">
+<meta property="og:locale" content="de_DE">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="TALENTEXPERTE">
+<meta property="og:title" content="Anmeldung - TALENTEXPERTE Fußball-Feriencamps">
+<meta property="og:description" content="Jetzt in wenigen Minuten zum Fußball-Feriencamp in Aachen anmelden und Platz sichern.">
+<meta property="og:url" content="https://www.talentexperte.de/anmeldung.html">
+<meta property="og:image" content="https://www.talentexperte.de/ci/logo.png">
+<meta property="og:image:alt" content="TALENTEXPERTE Logo">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
 <link rel="shortcut icon" href="favicon/favicon.ico" />
