--- a/impressum.html
+++ b/impressum.html
@@ -4,6 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Impressum – TALENTEXPERTE Fußballcamps</title>
+<meta name="description" content="Impressum der Fußballschule TALENTEXPERTE in Aachen mit allen Pflichtangaben und Kontaktinformationen.">
+<link rel="canonical" href="https://www.talentexperte.de/impressum.html">
+<meta property="og:locale" content="de_DE">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="TALENTEXPERTE">
+<meta property="og:title" content="Impressum - TALENTEXPERTE">
+<meta property="og:description" content="Impressum der Fußballschule TALENTEXPERTE in Aachen.">
+<meta property="og:url" content="https://www.talentexperte.de/impressum.html">
+<meta property="og:image" content="https://www.talentexperte.de/ci/logo.png">
+<meta property="og:image:alt" content="TALENTEXPERTE Logo">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
