--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/main.css">
 <meta name="description" content="Fußball-Feriencamps in Aachen für Kinder von 5-14 Jahren. Über 100 Camps, über 4.000 begeisterte Kinder. Seit 2005. Jetzt Platz sichern!">
+<link rel="canonical" href="https://www.talentexperte.de/">
+<meta property="og:locale" content="de_DE">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="TALENTEXPERTE">
+<meta property="og:title" content="TALENTEXPERTE - Fußball-Feriencamps in Aachen">
+<meta property="og:description" content="Fußball-Feriencamps in Aachen für Kinder von 5-14 Jahren. Seit 2005. Jetzt Platz sichern.">
+<meta property="og:url" content="https://www.talentexperte.de/">
+<meta property="og:image" content="https://www.talentexperte.de/ci/logo.png">
+<meta property="og:image:alt" content="TALENTEXPERTE Logo">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
