--- a/firmen-anmeldung.html
+++ b/firmen-anmeldung.html
@@ -6,7 +6,18 @@
 <title>Firmen-Anmeldung — TALENTEXPERTE Fußball-Feriencamps</title>
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/anmeldung.css">
+<meta name="description" content="Firmen-Anmeldung für Camp-Plätze von Mitarbeiter-Kindern bei TALENTEXPERTE in Aachen.">
 <meta name="robots" content="noindex, nofollow">
+<link rel="canonical" href="https://www.talentexperte.de/firmen-anmeldung.html">
+<meta property="og:locale" content="de_DE">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="TALENTEXPERTE">
+<meta property="og:title" content="Firmen-Anmeldung - TALENTEXPERTE Fußball-Feriencamps">
+<meta property="og:description" content="Anmeldung für Firmenplätze bei den TALENTEXPERTE Fußball-Feriencamps in Aachen.">
+<meta property="og:url" content="https://www.talentexperte.de/firmen-anmeldung.html">
+<meta property="og:image" content="https://www.talentexperte.de/ci/logo.png">
+<meta property="og:image:alt" content="TALENTEXPERTE Logo">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
 <link rel="shortcut icon" href="favicon/favicon.ico" />
