Add JSON-LD schema for Organization, LocalBusiness and FAQPage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,102 @@
 <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="TALENTEXPERTE" />
 <link rel="manifest" href="favicon/site.webmanifest" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://www.talentexperte.de/#organization",
+      "name": "TALENTEXPERTE",
+      "url": "https://www.talentexperte.de/",
+      "logo": "https://www.talentexperte.de/ci/logo.png",
+      "email": "info@talentexperte.de",
+      "telephone": "+49 1523 4678108",
+      "sameAs": [
+        "https://instagram.com/talentexperte"
+      ]
+    },
+    {
+      "@type": "LocalBusiness",
+      "@id": "https://www.talentexperte.de/#localbusiness",
+      "name": "TALENTEXPERTE",
+      "url": "https://www.talentexperte.de/",
+      "image": "https://www.talentexperte.de/ci/logo.png",
+      "email": "info@talentexperte.de",
+      "telephone": "+49 1523 4678108",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Branderhoferweg 15",
+        "postalCode": "52066",
+        "addressLocality": "Aachen",
+        "addressCountry": "DE"
+      },
+      "areaServed": {
+        "@type": "City",
+        "name": "Aachen"
+      },
+      "parentOrganization": {
+        "@id": "https://www.talentexperte.de/#organization"
+      }
+    },
+    {
+      "@type": "FAQPage",
+      "@id": "https://www.talentexperte.de/#faq",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Fuer welches Alter sind die Camps geeignet?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Unsere Feriencamps sind fuer Kinder von 5 bis 14 Jahren geeignet, unabhaengig von der Spielstaerke. Ob Anfaenger oder Vereinsspieler, jedes Kind wird individuell gefoerdert und in passende Gruppen eingeteilt."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Was ist im Preis enthalten?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Im Camp-Preis sind vier Tage anspruchsvolles Training, Mittagessen, Getraenke und Obst sowie eine Urkunde, ein Erinnerungsfoto und eine Medaille enthalten."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Wie sind die Trainingszeiten?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Die Camps finden taeglich von 09:00 bis 15:00 Uhr statt. Bitte bringen Sie Ihr Kind bis spaetestens 8:45 Uhr zum Sportplatz. Abholung ist um 15:00 Uhr."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Was passiert bei schlechtem Wetter?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Unsere Camps finden auf Kunstrasen statt und werden bei jedem Wetter durchgefuehrt. Bitte achten Sie auf wetterfeste Kleidung. Nur bei extremen Wetterbedingungen wird das Programm angepasst."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Kann ich stornieren oder umbuchen?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Bei Ruecktritt erhalten Sie einen Gutschein ueber die volle oder anteilige Teilnahmegebuehr. Dieser ist unbefristet gueltig und uebertragbar. Bei Auszahlung werden 35 EUR Bearbeitungsgebuehr einbehalten."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Muss mein Kind bereits im Verein spielen?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nein. Unsere Camps sind fuer alle Kinder offen, ob Vereinsspieler, Hobbykicker oder Anfaenger. Wir bilden altersgerechte Gruppen, damit jedes Kind auf seinem Niveau gefordert und gefoerdert wird."
+          }
+        }
+      ]
+    }
+  ]
+}
+</script>
 </head>
 <body>
 
