Enhance SEO metadata and optimize homepage images with WebP srcset

--- a/bestaetigung.html
+++ b/bestaetigung.html
@@ -4,6 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zahlung bestätigt – TALENTEXPERTE</title>
+<meta name="description" content="Bestätigung Ihrer TALENTEXPERTE Camp-Anmeldung in Aachen mit allen wichtigen Buchungsdetails.">
+<meta name="robots" content="noindex, nofollow">
+<link rel="canonical" href="https://www.talentexperte.de/bestaetigung.html">
+<meta property="og:locale" content="de_DE">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="TALENTEXPERTE">
+<meta property="og:title" content="Zahlung bestätigt - TALENTEXPERTE">
+<meta property="og:description" content="Ihre Anmeldung wurde erfolgreich bestätigt.">
+<meta property="og:url" content="https://www.talentexperte.de/bestaetigung.html">
+<meta property="og:image" content="https://www.talentexperte.de/ci/logo.png">
+<meta property="og:image:alt" content="TALENTEXPERTE Logo">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/bestaetigung.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
