--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Admin – TALENTEXPERTE</title>
+<meta name="robots" content="noindex, nofollow">
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/admin.css">
 <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
