--- a/bestaetigung-firma.html
+++ b/bestaetigung-firma.html
@@ -4,9 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Anmeldung erfolgreich — TALENTEXPERTE Firmen</title>
+<meta name="description" content="Bestätigung der Firmen-Anmeldung bei TALENTEXPERTE inklusive Download der Teilnahmebestätigung.">
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/bestaetigung.css">
 <meta name="robots" content="noindex, nofollow">
+<link rel="canonical" href="https://www.talentexperte.de/bestaetigung-firma.html">
+<meta property="og:locale" content="de_DE">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="TALENTEXPERTE">
+<meta property="og:title" content="Anmeldung erfolgreich - TALENTEXPERTE Firmen">
+<meta property="og:description" content="Ihre Firmen-Anmeldung wurde erfolgreich gespeichert.">
+<meta property="og:url" content="https://www.talentexperte.de/bestaetigung-firma.html">
+<meta property="og:image" content="https://www.talentexperte.de/ci/logo.png">
+<meta property="og:image:alt" content="TALENTEXPERTE Logo">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
 <link rel="shortcut icon" href="favicon/favicon.ico" />
