--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <!-- HERO -->
 <section class="hero" id="hero">
-  <div class="hero-bg"><img src="images/hero.jpg" alt="Kinder beim Fußballcamp" loading="eager"></div>
+  <div class="hero-bg"><picture><source type="image/webp" srcset="images/hero-480.webp 480w, images/hero-768.webp 768w, images/hero.webp 1242w" sizes="100vw"><img src="images/hero.jpg" alt="Kinder beim Fußballcamp" loading="eager"></picture></div>
   <div class="hero-overlay"></div>
   <div class="container hero-content">
     <div class="hero-badge">⭐ Seit 2005 — Über 20 Jahre Erfahrung</div>
@@ -154,13 +154,13 @@
 
 <!-- PHOTO STRIP -->
 <div class="photo-strip"><div class="photo-strip-inner">
-  <img src="images/jubel.jpg" alt="Jubel" loading="lazy"><img src="images/training.jpg" alt="Training" loading="lazy"><img src="images/freunde.jpg" alt="Freunde" loading="lazy"><img src="images/spielszene1.jpg" alt="Spielszene" loading="lazy"><img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy"><img src="images/atmosphaere.jpg" alt="Atmosphäre" loading="lazy">
-  <img src="images/jubel.jpg" alt="Jubel" loading="lazy"><img src="images/training.jpg" alt="Training" loading="lazy"><img src="images/freunde.jpg" alt="Freunde" loading="lazy"><img src="images/spielszene1.jpg" alt="Spielszene" loading="lazy"><img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy"><img src="images/atmosphaere.jpg" alt="Atmosphäre" loading="lazy">
+  <picture><source type="image/webp" srcset="images/jubel-480.webp 480w, images/jubel-768.webp 768w, images/jubel.webp 800w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/jubel.jpg" alt="Jubel" loading="lazy"></picture><picture><source type="image/webp" srcset="images/training-480.webp 480w, images/training-768.webp 768w, images/training.webp 800w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/training.jpg" alt="Training" loading="lazy"></picture><picture><source type="image/webp" srcset="images/freunde-480.webp 480w, images/freunde-768.webp 768w, images/freunde.webp 1920w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/freunde.jpg" alt="Freunde" loading="lazy"></picture><picture><source type="image/webp" srcset="images/spielszene1-480.webp 480w, images/spielszene1-768.webp 768w, images/spielszene1.webp 2784w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/spielszene1.jpg" alt="Spielszene" loading="lazy"></picture><picture><source type="image/webp" srcset="images/mittagessen-480.webp 480w, images/mittagessen-768.webp 768w, images/mittagessen.webp 800w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy"></picture><picture><source type="image/webp" srcset="images/atmosphaere-480.webp 480w, images/atmosphaere-768.webp 768w, images/atmosphaere.webp 2784w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/atmosphaere.jpg" alt="Atmosphäre" loading="lazy"></picture>
+  <picture><source type="image/webp" srcset="images/jubel-480.webp 480w, images/jubel-768.webp 768w, images/jubel.webp 800w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/jubel.jpg" alt="Jubel" loading="lazy"></picture><picture><source type="image/webp" srcset="images/training-480.webp 480w, images/training-768.webp 768w, images/training.webp 800w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/training.jpg" alt="Training" loading="lazy"></picture><picture><source type="image/webp" srcset="images/freunde-480.webp 480w, images/freunde-768.webp 768w, images/freunde.webp 1920w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/freunde.jpg" alt="Freunde" loading="lazy"></picture><picture><source type="image/webp" srcset="images/spielszene1-480.webp 480w, images/spielszene1-768.webp 768w, images/spielszene1.webp 2784w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/spielszene1.jpg" alt="Spielszene" loading="lazy"></picture><picture><source type="image/webp" srcset="images/mittagessen-480.webp 480w, images/mittagessen-768.webp 768w, images/mittagessen.webp 800w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy"></picture><picture><source type="image/webp" srcset="images/atmosphaere-480.webp 480w, images/atmosphaere-768.webp 768w, images/atmosphaere.webp 2784w" sizes="(max-width: 768px) 40vw, 25vw"><img src="images/atmosphaere.jpg" alt="Atmosphäre" loading="lazy"></picture>
 </div></div>
 
 <!-- ABOUT -->
 <section class="about section-pad" id="about"><div class="container"><div class="about-grid">
-  <div class="about-image reveal"><img src="images/about.jpg" alt="Trainer mit Kindern" loading="lazy"></div>
+  <div class="about-image reveal"><picture><source type="image/webp" srcset="images/about-480.webp 480w, images/about-768.webp 768w, images/about.webp 800w" sizes="(max-width: 768px) 100vw, 45vw"><img src="images/about.jpg" alt="Trainer mit Kindern" loading="lazy"></picture></div>
   <div class="about-content">
     <div class="section-label reveal">Über uns</div>
     <h2 class="section-title reveal reveal-delay-1">Jedes Kind<br>verdient <span class="text-red">gutes Training</span></h2>
@@ -201,9 +201,9 @@
       <div class="included-item reveal reveal-delay-3"><div class="included-icon">⏰</div><div><h4>Täglich 09:00 – 15:00 Uhr</h4><p>09:00 – 10:00 Aufnahme und Freispiel unter Aufsicht<br>10:00 – 12:00 Erste Einheit<br>12:00 – 13:00 Mittagessen / Pause<br>13:00 – 15:00 Zweite Einheit</p></div></div>
     </div>
     <div class="included-photos reveal reveal-delay-2">
-      <img src="images/trainer.jpg" alt="TALENTEXPERTE Trainer" loading="lazy">
-      <img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy">
-      <img src="images/freunde.jpg" alt="Freundschaften" loading="lazy">
+      <picture><source type="image/webp" srcset="images/trainer-480.webp 480w, images/trainer-768.webp 768w, images/trainer.webp 800w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/trainer.jpg" alt="TALENTEXPERTE Trainer" loading="lazy"></picture>
+      <picture><source type="image/webp" srcset="images/mittagessen-480.webp 480w, images/mittagessen-768.webp 768w, images/mittagessen.webp 800w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy"></picture>
+      <picture><source type="image/webp" srcset="images/freunde-480.webp 480w, images/freunde-768.webp 768w, images/freunde.webp 1920w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/freunde.jpg" alt="Freundschaften" loading="lazy"></picture>
     </div>
   </div>
 </div></section>
@@ -234,7 +234,7 @@
 </div></section>
 
 <!-- GROUP PHOTO -->
-<div class="group-banner"><img src="images/gruppenfoto.jpg" alt="Alle Camp-Teilnehmer" loading="lazy"><div class="group-banner-overlay"></div></div>
+<div class="group-banner"><picture><source type="image/webp" srcset="images/gruppenfoto-480.webp 480w, images/gruppenfoto-768.webp 768w, images/gruppenfoto.webp 1200w" sizes="100vw"><img src="images/gruppenfoto.jpg" alt="Alle Camp-Teilnehmer" loading="lazy"></picture><div class="group-banner-overlay"></div></div>
 
 <!-- INSTAGRAM -->
 <section class="insta section-pad" id="instagram"><div class="container">
