--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <meta property="og:image" content="https://www.talentexperte.de/ci/logo.png">
 <meta property="og:image:alt" content="TALENTEXPERTE Logo">
 <meta name="twitter:card" content="summary_large_image">
+<link rel="preconnect" href="https://elfsightcdn.com" crossorigin>
+<link rel="preconnect" href="https://unpkg.com" crossorigin>
+<link rel="dns-prefetch" href="//elfsightcdn.com">
+<link rel="dns-prefetch" href="//unpkg.com">
+<link rel="preload" as="image" href="images/hero.jpg" fetchpriority="high">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
@@ -134,7 +139,7 @@
 
 <!-- HERO -->
 <section class="hero" id="hero">
-  <div class="hero-bg"><picture><source type="image/avif" srcset="images/hero-480.avif 480w, images/hero-768.avif 768w, images/hero.avif 1242w" sizes="100vw"><source type="image/webp" srcset="images/hero-480.webp 480w, images/hero-768.webp 768w, images/hero.webp 1242w" sizes="100vw"><img src="images/hero.jpg" alt="Kinder beim Fußballcamp" loading="eager"></picture></div>
+  <div class="hero-bg"><picture><source type="image/avif" srcset="images/hero-480.avif 480w, images/hero-768.avif 768w, images/hero.avif 1242w" sizes="100vw"><source type="image/webp" srcset="images/hero-480.webp 480w, images/hero-768.webp 768w, images/hero.webp 1242w" sizes="100vw"><img src="images/hero.jpg" alt="Kinder beim Fußballcamp" loading="eager" fetchpriority="high" decoding="async" width="1242" height="911"></picture></div>
   <div class="hero-overlay"></div>
   <div class="container hero-content">
     <div class="hero-badge">⭐ Seit 2005 — Über 20 Jahre Erfahrung</div>
@@ -160,7 +165,7 @@
 
 <!-- ABOUT -->
 <section class="about section-pad" id="about"><div class="container"><div class="about-grid">
-  <div class="about-image reveal"><picture><source type="image/avif" srcset="images/about-480.avif 480w, images/about-768.avif 768w, images/about.avif 800w" sizes="(max-width: 768px) 100vw, 45vw"><source type="image/webp" srcset="images/about-480.webp 480w, images/about-768.webp 768w, images/about.webp 800w" sizes="(max-width: 768px) 100vw, 45vw"><img src="images/about.jpg" alt="Trainer mit Kindern" loading="lazy"></picture></div>
+  <div class="about-image reveal"><picture><source type="image/avif" srcset="images/about-480.avif 480w, images/about-768.avif 768w, images/about.avif 800w" sizes="(max-width: 768px) 100vw, 45vw"><source type="image/webp" srcset="images/about-480.webp 480w, images/about-768.webp 768w, images/about.webp 800w" sizes="(max-width: 768px) 100vw, 45vw"><img src="images/about.jpg" alt="Trainer mit Kindern" loading="lazy" decoding="async" width="800" height="1067"></picture></div>
   <div class="about-content">
     <div class="section-label reveal">Über uns</div>
     <h2 class="section-title reveal reveal-delay-1">Jedes Kind<br>verdient <span class="text-red">gutes Training</span></h2>
@@ -184,7 +189,6 @@
     <p class="section-subtitle reveal reveal-delay-2" style="margin: 0 auto;">Echte Stimmen von Eltern, deren Kinder bei uns trainiert haben.</p>
   </div>
   <div class="reviews-feed reveal reveal-delay-3" style="margin-top: 40px;">
-    <script src="https://elfsightcdn.com/platform.js" async></script>
     <div class="elfsight-app-b91dc3a0-0919-4ce5-8bbb-e9ac2dadb00c" data-elfsight-app-lazy></div>
   </div>
 </div></section>
@@ -201,9 +205,9 @@
       <div class="included-item reveal reveal-delay-3"><div class="included-icon">⏰</div><div><h4>Täglich 09:00 – 15:00 Uhr</h4><p>09:00 – 10:00 Aufnahme und Freispiel unter Aufsicht<br>10:00 – 12:00 Erste Einheit<br>12:00 – 13:00 Mittagessen / Pause<br>13:00 – 15:00 Zweite Einheit</p></div></div>
     </div>
     <div class="included-photos reveal reveal-delay-2">
-      <picture><source type="image/avif" srcset="images/trainer-480.avif 480w, images/trainer-768.avif 768w, images/trainer.avif 800w" sizes="(max-width: 768px) 100vw, 33vw"><source type="image/webp" srcset="images/trainer-480.webp 480w, images/trainer-768.webp 768w, images/trainer.webp 800w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/trainer.jpg" alt="TALENTEXPERTE Trainer" loading="lazy"></picture>
-      <picture><source type="image/avif" srcset="images/mittagessen-480.avif 480w, images/mittagessen-768.avif 768w, images/mittagessen.avif 800w" sizes="(max-width: 768px) 100vw, 33vw"><source type="image/webp" srcset="images/mittagessen-480.webp 480w, images/mittagessen-768.webp 768w, images/mittagessen.webp 800w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy"></picture>
-      <picture><source type="image/avif" srcset="images/freunde-480.avif 480w, images/freunde-768.avif 768w, images/freunde.avif 1920w" sizes="(max-width: 768px) 100vw, 33vw"><source type="image/webp" srcset="images/freunde-480.webp 480w, images/freunde-768.webp 768w, images/freunde.webp 1920w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/freunde.jpg" alt="Freundschaften" loading="lazy"></picture>
+      <picture><source type="image/avif" srcset="images/trainer-480.avif 480w, images/trainer-768.avif 768w, images/trainer.avif 800w" sizes="(max-width: 768px) 100vw, 33vw"><source type="image/webp" srcset="images/trainer-480.webp 480w, images/trainer-768.webp 768w, images/trainer.webp 800w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/trainer.jpg" alt="TALENTEXPERTE Trainer" loading="lazy" decoding="async" width="800" height="1067"></picture>
+      <picture><source type="image/avif" srcset="images/mittagessen-480.avif 480w, images/mittagessen-768.avif 768w, images/mittagessen.avif 800w" sizes="(max-width: 768px) 100vw, 33vw"><source type="image/webp" srcset="images/mittagessen-480.webp 480w, images/mittagessen-768.webp 768w, images/mittagessen.webp 800w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/mittagessen.jpg" alt="Mittagessen" loading="lazy" decoding="async" width="800" height="1067"></picture>
+      <picture><source type="image/avif" srcset="images/freunde-480.avif 480w, images/freunde-768.avif 768w, images/freunde.avif 1920w" sizes="(max-width: 768px) 100vw, 33vw"><source type="image/webp" srcset="images/freunde-480.webp 480w, images/freunde-768.webp 768w, images/freunde.webp 1920w" sizes="(max-width: 768px) 100vw, 33vw"><img src="images/freunde.jpg" alt="Freundschaften" loading="lazy" decoding="async" width="1920" height="1280"></picture>
     </div>
   </div>
 </div></section>
@@ -234,7 +238,7 @@
 </div></section>
 
 <!-- GROUP PHOTO -->
-<div class="group-banner"><picture><source type="image/avif" srcset="images/gruppenfoto-480.avif 480w, images/gruppenfoto-768.avif 768w, images/gruppenfoto.avif 1200w" sizes="100vw"><source type="image/webp" srcset="images/gruppenfoto-480.webp 480w, images/gruppenfoto-768.webp 768w, images/gruppenfoto.webp 1200w" sizes="100vw"><img src="images/gruppenfoto.jpg" alt="Alle Camp-Teilnehmer" loading="lazy"></picture><div class="group-banner-overlay"></div></div>
+<div class="group-banner"><picture><source type="image/avif" srcset="images/gruppenfoto-480.avif 480w, images/gruppenfoto-768.avif 768w, images/gruppenfoto.avif 1200w" sizes="100vw"><source type="image/webp" srcset="images/gruppenfoto-480.webp 480w, images/gruppenfoto-768.webp 768w, images/gruppenfoto.webp 1200w" sizes="100vw"><img src="images/gruppenfoto.jpg" alt="Alle Camp-Teilnehmer" loading="lazy" decoding="async" width="1200" height="770"></picture><div class="group-banner-overlay"></div></div>
 
 <!-- INSTAGRAM -->
 <section class="insta section-pad" id="instagram"><div class="container">
@@ -244,7 +248,6 @@
     <p class="section-subtitle reveal reveal-delay-2">Bitte teilen Sie unsere Posts und unterstützen Sie damit unsere Fußballschule.</p>
   </div>
   <div class="insta-feed reveal reveal-delay-3">
-    <script src="https://elfsightcdn.com/platform.js" async></script>
     <div class="elfsight-app-53f9643a-8f40-4f11-917b-7ec3410b68bd" data-elfsight-app-lazy></div>
   </div>
   <div class="insta-cta reveal reveal-delay-3">
@@ -307,6 +310,20 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+/* Elfsight nur einmal und verzögert laden (verbessert INP/LCP) */
+(function(){
+  function loadElfsight(){
+    if(window.__elfsightLoaded)return;
+    window.__elfsightLoaded=true;
+    var s=document.createElement('script');
+    s.src='https://elfsightcdn.com/platform.js';
+    s.async=true;
+    document.body.appendChild(s);
+  }
+  if('requestIdleCallback' in window)requestIdleCallback(loadElfsight,{timeout:3000});
+  else setTimeout(loadElfsight,2500);
+})();
+
 /* Email-Schutz gegen Cloudflare-Obfuskierung */
 (function(){var e='kontakt'+'@'+'talentexperte'+'.de';var a=document.getElementById('email-link');if(a){a.href='mai'+'lto:'+e;a.textContent=e}})();
 
