Further CWV tuning: viewport-based Elfsight loading and AVIF hero preload

--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
 <meta property="og:image:alt" content="TALENTEXPERTE Logo">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="preconnect" href="https://elfsightcdn.com" crossorigin>
-<link rel="preconnect" href="https://unpkg.com" crossorigin>
 <link rel="dns-prefetch" href="//elfsightcdn.com">
-<link rel="dns-prefetch" href="//unpkg.com">
-<link rel="preload" as="image" href="images/hero.jpg" fetchpriority="high">
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+<link rel="preload" as="image" href="images/hero.avif" imagesrcset="images/hero-480.avif 480w, images/hero-768.avif 768w, images/hero.avif 1242w" imagesizes="100vw" fetchpriority="high">
 <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
 <link rel="shortcut icon" href="favicon/favicon.ico" />
@@ -308,9 +305,8 @@
 
 <a href="https://wa.me/4915234678108?text=Hallo%2C%20ich%20habe%20eine%20Frage%20zu%20den%20Feriencamps" target="_blank" rel="noopener" class="whatsapp-fab" aria-label="WhatsApp"><svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg></a>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-/* Elfsight nur einmal und verzögert laden (verbessert INP/LCP) */
+/* Elfsight nur laden, wenn Widget-Bereich sichtbar wird */
 (function(){
   function loadElfsight(){
     if(window.__elfsightLoaded)return;
@@ -320,8 +316,21 @@
     s.async=true;
     document.body.appendChild(s);
   }
-  if('requestIdleCallback' in window)requestIdleCallback(loadElfsight,{timeout:3000});
-  else setTimeout(loadElfsight,2500);
+  var widgets=document.querySelectorAll('[data-elfsight-app-lazy]');
+  if(!widgets.length)return;
+  if('IntersectionObserver' in window){
+    var io=new IntersectionObserver(function(entries){
+      entries.forEach(function(entry){
+        if(entry.isIntersecting){
+          loadElfsight();
+          io.disconnect();
+        }
+      });
+    },{rootMargin:'250px 0px'});
+    widgets.forEach(function(w){io.observe(w)});
+  }else{
+    setTimeout(loadElfsight,6000);
+  }
 })();
 
 /* Email-Schutz gegen Cloudflare-Obfuskierung */
@@ -340,16 +349,55 @@ document.querySelectorAll('.reveal').forEach(function(el){obs.observe(el)});
 /* FAQ Accordion */
 document.querySelectorAll('.faq-question').forEach(function(btn){btn.addEventListener('click',function(){var item=btn.closest('.faq-item');var wasOpen=item.classList.contains('open');document.querySelectorAll('.faq-item').forEach(function(i){i.classList.remove('open')});if(!wasOpen){item.classList.add('open')}})});
 
-/* Leaflet Karte */
-var map=L.map('map',{zoomControl:false,dragging:false,touchZoom:false,scrollWheelZoom:false,doubleClickZoom:false,boxZoom:false,keyboard:false,tap:false,attributionControl:false}).setView([50.7624155,6.1042797],15);
-L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png',{attribution:'OpenStreetMap | CARTO'}).addTo(map);
-L.control.attribution({prefix:false}).addTo(map).addAttribution('OpenStreetMap | CARTO');
-var pulse=L.divIcon({className:'pulse',iconSize:[20,20],iconAnchor:[10,10]});
-L.marker([50.7624155,6.1042797],{icon:pulse}).addTo(map);
-var popupOffset=0.008;
-L.marker([50.7624155+popupOffset,6.1042797],{icon:L.divIcon({className:'custom-popup-container',html:'<div class="custom-popup-content"><div class="popup-title">TALENTEXPERTE ❖ JSC BW Aachen</div><div class="popup-address">Branderhofer Weg<br>52066 Aachen</div></div>',iconSize:[250,null],iconAnchor:[125,70]})}).addTo(map);
-setTimeout(function(){map.setView([50.7624155,6.1042797],15)},100);
-window.addEventListener('resize',function(){map.invalidateSize()});
+/* Leaflet Karte lazy laden (senkt ungenutztes JS im Initial-Load) */
+function loadLeafletAssets(){
+  return new Promise(function(resolve,reject){
+    if(window.L){resolve();return}
+    var cssId='leaflet-css-lazy';
+    if(!document.getElementById(cssId)){
+      var l=document.createElement('link');
+      l.id=cssId;
+      l.rel='stylesheet';
+      l.href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css';
+      document.head.appendChild(l);
+    }
+    var s=document.createElement('script');
+    s.src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js';
+    s.async=true;
+    s.onload=function(){resolve()};
+    s.onerror=function(){reject(new Error('Leaflet konnte nicht geladen werden'))};
+    document.body.appendChild(s);
+  });
+}
+function initMap(){
+  if(initMap.__done)return;
+  initMap.__done=true;
+  loadLeafletAssets().then(function(){
+    var map=L.map('map',{zoomControl:false,dragging:false,touchZoom:false,scrollWheelZoom:false,doubleClickZoom:false,boxZoom:false,keyboard:false,tap:false,attributionControl:false}).setView([50.7624155,6.1042797],15);
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png',{attribution:'OpenStreetMap | CARTO'}).addTo(map);
+    L.control.attribution({prefix:false}).addTo(map).addAttribution('OpenStreetMap | CARTO');
+    var pulse=L.divIcon({className:'pulse',iconSize:[20,20],iconAnchor:[10,10]});
+    L.marker([50.7624155,6.1042797],{icon:pulse}).addTo(map);
+    var popupOffset=0.008;
+    L.marker([50.7624155+popupOffset,6.1042797],{icon:L.divIcon({className:'custom-popup-container',html:'<div class="custom-popup-content"><div class="popup-title">TALENTEXPERTE ❖ JSC BW Aachen</div><div class="popup-address">Branderhofer Weg<br>52066 Aachen</div></div>',iconSize:[250,null],iconAnchor:[125,70]})}).addTo(map);
+    setTimeout(function(){map.setView([50.7624155,6.1042797],15)},100);
+    window.addEventListener('resize',function(){map.invalidateSize()});
+  }).catch(function(e){console.error(e)});
+}
+var mapEl=document.getElementById('map');
+if(mapEl&&'IntersectionObserver' in window){
+  var mapObs=new IntersectionObserver(function(entries){
+    entries.forEach(function(entry){
+      if(entry.isIntersecting){
+        initMap();
+        mapObs.disconnect();
+      }
+    });
+  },{rootMargin:'200px 0px'});
+  mapObs.observe(mapEl);
+}else{
+  setTimeout(initMap,2000);
+}
 
 /* Smooth Scroll */
 document.querySelectorAll('a[href^="#"]').forEach(function(a){a.addEventListener('click',function(e){var target=document.querySelector(a.getAttribute('href'));if(target){e.preventDefault();target.scrollIntoView({behavior:'smooth',block:'start'})}})});
