--- a/anmeldung.html
+++ b/anmeldung.html
@@ -28,7 +28,7 @@
 
 <!-- NAV -->
 <nav class="nav"><div class="container">
-  <a href="index.html" class="nav-logo"><img src="ci/logo.png" alt="Logo"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
+  <a href="index.html" class="nav-logo"><img src="ci/logo.webp" alt="Logo"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
   <a href="index.html" class="nav-back">← Zurück zur Startseite</a>
 </div></nav>
 
