--- a/index Kopie.html
+++ b/index Kopie.html
@@ -18,7 +18,7 @@
 <body>
 
 <nav class="nav" id="nav"><div class="container">
-  <a href="#" class="nav-logo"><img src="ci/logo.png" alt="TALENTEXPERTE Logo" loading="eager"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
+  <a href="#" class="nav-logo"><img src="ci/logo.webp" alt="TALENTEXPERTE Logo" loading="eager"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
   <ul class="nav-links" id="navLinks">
     <li><a href="#camps">Camps</a></li><li><a href="#about">Über uns</a></li><li><a href="#reviews">Bewertungen</a></li><li><a href="#faq">FAQ</a></li><li><a href="#standorte">Standort</a></li>
     <li><a href="#camps" class="btn btn-red nav-cta">Jetzt anmelden</a></li>
@@ -189,7 +189,7 @@
 <!-- FOOTER -->
 <footer class="footer" id="kontakt"><div class="container">
   <div class="footer-grid">
-    <div class="footer-brand"><a href="#" class="nav-logo footer-brand-link"><img src="ci/logo.png" alt="Logo" class="footer-logo-img"><span class="nav-brand">TALENT<span class="text-red">EXPERTE</span></span></a><p>Fußball-Feriencamps in Aachen seit 2005. Anspruchsvolles und effektives Training für alle Kinder, die besser werden möchten.</p></div>
+    <div class="footer-brand"><a href="#" class="nav-logo footer-brand-link"><img src="ci/logo.webp" alt="Logo" class="footer-logo-img"><span class="nav-brand">TALENT<span class="text-red">EXPERTE</span></span></a><p>Fußball-Feriencamps in Aachen seit 2005. Anspruchsvolles und effektives Training für alle Kinder, die besser werden möchten.</p></div>
     <div><h4>Navigation</h4><ul class="footer-links"><li><a href="#camps">Camps 2026</a></li><li><a href="#about">Über uns</a></li><li><a href="#reviews">Bewertungen</a></li><li><a href="#faq">FAQ</a></li><li><a href="#standorte">Standort</a></li></ul></div>
     <div><h4>Rechtliches</h4><ul class="footer-links"><li><a href="impressum.html">Impressum</a></li><li><a href="datenschutz.html">Datenschutz</a></li><li><a href="agb.html">AGB</a></li></ul></div>
     <div><h4>Kontakt</h4><div class="footer-contact-item">📧 <a id="email-link" class="footer-email-link">wird geladen…</a></div><div class="footer-contact-item">📱 +49 1523 4678108</div><div class="footer-contact-item">📍 Aachen, NRW</div><div class="footer-social-wrap"><a href="https://instagram.com/talentexperte" target="_blank" rel="noopener" class="footer-social-link">📷</a><a href="https://wa.me/4915234678108" target="_blank" rel="noopener" class="footer-social-link">💬</a></div></div>
