--- a/bestaetigung.html
+++ b/bestaetigung.html
@@ -29,7 +29,7 @@
 <body>
 
 <nav class="nav"><div class="container">
-  <a href="index.html" class="nav-logo"><img src="ci/logo.png" alt="Logo"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
+  <a href="index.html" class="nav-logo"><img src="ci/logo.webp" alt="Logo"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
 </div></nav>
 
 <div class="main">
