--- a/datenschutz.html
+++ b/datenschutz.html
@@ -51,7 +51,7 @@ a{color:var(--red);text-decoration:none;transition:color .3s}a:hover{color:var(-
 </head>
 <body>
 <nav class="nav"><div class="container">
-  <a href="index.html" class="nav-logo"><img src="ci/logo.png" alt="Logo"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
+  <a href="index.html" class="nav-logo"><img src="ci/logo.webp" alt="Logo"><span class="nav-brand">TALENT<span>EXPERTE</span></span></a>
   <a href="index.html" class="nav-back">← Zurück zur Startseite</a>
 </div></nav>
 <main class="content">
